+2 potions, add minY to custom worlds enums, cleanup